--- a/responsive-design/02-1-styles.css
+++ b/responsive-design/02-1-styles.css
@@ -167,12 +167,13 @@
   }
   
   /* Helpers
+  
       ============================= */
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
-    height: 1px;
-    width: 1px;
+    height: auto;
+    width: 100px;
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
@@ -191,7 +192,25 @@
   
   /* Grid
       ============================= */
-  
+  @media only screen and(max-width:767ps){
+    .section-padding{
+      padding:5rem1.5rem;
+    }
+    .section-body-padding{
+      padding: 2rem 0 0 ;
+    }
+    .ul-orw .orw {
+      flex-direction: column;
+      margin: 0;
+    }
+    .col-{
+      margin: 0 0 3rem 0;
+    }
+    .col-1-3 .col-1-2{
+      width:100%;
+      height:auto;
+    }
+  }
   ul.row {
     margin: -1rem;
     padding: 0;
@@ -217,6 +236,11 @@
   /* Navbar
       ============================= */
   
+      @media only screen and(max-width:767px){
+        .navbar-menu{
+          display:none;
+        }
+      }
   .nav {
     margin: 0;
     padding: 0;
@@ -399,6 +423,11 @@
   
   .section-latest-news .row {
     flex-direction: row-reverse;
+  }
+  @media only screen and(max_width: 767px){
+   .section-latest-news .row{
+    flex-direction: column;
+   }
   }
   
   /* Section SERVICES
